themes/openstack/scss/navigation_menu.scss
@import "_cdn.scss";

.brand-wrapper {
    margin: 10px 0 10px 15px;
    padding-right: 20px;
    float: left;
    border-right: 1px solid #eee;
    min-width: 135px; }

a.navbar-brand {
    background: url('#{$static_images_base_url}/openstack-logo-full.svg') left no-repeat;
    height: 35px;
    width: 135px; }

.openstack-search-bar {
    width: 100%;
    margin: 9px 0 0 10px;
}

.ossw-mobile {
    display: none;
}

.global-nav {
    margin-top: 40px;
    @media (max-width: 768px) {
        margin-top:0px;
    }
}

.nav-bar-inner-container{
    padding-left: 15px;
    padding-right: 15px;
}

@media (min-width: 768px) {
    .brand-wrapper {
        margin: 10px 0;
    }
}

#nav_container{
}

@media (min-width: 768px) {
    #nav_container {
        height: 40px;
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        z-index: 30;
    }
}

@media (min-width: 768px) and (max-width: 1310px) {
    .brand-wrapper {
        width: 75px;
        min-width: 75px;
        margin-top: 0; }
    a.navbar-brand {
        background: url('#{$static_images_base_url}/openstack-logo-vert.svg') left no-repeat;
        margin-left: 0px !important;
        height: 54px;
        width: 59px; }
    .search-container {
        left: 95px !important;
    }
}

@media only screen and (max-device-width: 1024px) {
    .brand-wrapper {
        padding-right: 20px;
        float: left;
        border-right: 0;
        min-width: 135px;
    }
    a.navbar-brand {
        background: url('#{$static_images_base_url}/openstack-logo-full.svg') left no-repeat;
        height: 35px;
        width: 135px;
    }
}

.navbar-default {
    border-radius: 0px;
    background: #fff;
    margin-bottom: 0;
    padding: 20px 0; }

.navbar-default .container {
    background-color: white;
    position: relative;
}

@media (min-width: 768px) and (max-width: 1200px) {
    .navbar-default .container {
        width: 98%; } }

ul.navbar-main {
    display: none;
    float: right; }

@media (min-width: 768px) and (max-width: 1097px) {
    ul.navbar-main.show {
        display: block;
    }
    .navbar-default .container {
        padding-right: 0px;
        padding-left: 0px;
    }
}

@media (max-width: 767px) {
    ul.navbar-main.show {
        display: block;
        margin-right: 0;
        margin-left: 0;
        width: 100%;
    }
}

.navbar-default ul.navbar-main > li > a {
    color: #8a959e;
    font-size: 12px;
    font-weight: 400;
    text-transform: uppercase; }

@media (min-width: 768px) and (max-width: 1025px) {
    ul.navbar-main {
        margin-top: 1px; }
    .navbar-default ul.navbar-main > li > a {
        font-size: 11px;
        padding: 15px 8px; } }

.navbar-default ul.navbar-main > li > a.sign-in-btn {
    background: #2A4E68;
    padding: 7px 25px;
    border-radius: 2px;
    color: #fff;
    margin-top: 7px; }

.navbar-default ul.navbar-main > li > a.sign-in-btn:hover {
    background: #286A9D;
    color: #fff; }

@media (max-width: 768px) {
    .navbar-default ul.navbar-main > li > a.sign-in-btn {
        padding: 5px 10px;
        margin-top: 9px; }
    .ossw-mobile {
        display: block;
    }

}

@media (max-width: 767px), only screen and (max-device-width: 1024px) {
    .navbar-default ul.navbar-main > li > a.sign-in-btn {
        margin: 0;
        padding: 10px 15px;
        background: transparent;
        border: none;
        color: #2A4E68;
        font-size: 12px;
        font-weight: 700;
        text-transform: uppercase; }
    .navbar-default ul.navbar-main > li > a.sign-in-btn:hover {
        background: #fff;
        color: #286A9D; } }

.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
    background: #fff; }

.navbar-nav > li > .dropdown-menu {
    margin-top: 10px;
    padding: 10px 0;
    min-width: 230px;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px; }

.navbar-nav > li > .dropdown-menu:after, .navbar-nav > li > .dropdown-menu:before {
    bottom: 100%;
    left: 25%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none; }

.navbar-nav > li > .dropdown-menu:after {
    border-color: rgba(255, 255, 255, 0);
    border-bottom-color: #ffffff;
    border-width: 15px;
    margin-left: -15px; }

.navbar-nav > li > .dropdown-menu:before {
    border-color: rgba(170, 170, 170, 0);
    border-bottom-color: #aaaaaa;
    border-width: 16px;
    margin-left: -16px; }

@media (max-width: 767px), only screen and (max-device-width: 1024px) {
    .navbar-nav > li > .dropdown-menu:after, .navbar-nav > li > .dropdown-menu:before {
        display: none; }
    .navbar-nav > li > .dropdown-menu:after {
        display: none; }
    .navbar-nav > li > .dropdown-menu:before {
        display: none; } }

i.fa-caret-right {
    margin-left: 8px; }

.navbar-nav > li > .dropdown-menu li a {
    text-transform: uppercase;
    padding: 13px 20px;
    font-size: 12px;
    color: #8a959e; }

.navbar-nav > li > .dropdown-menu li a:hover {
    color: #333; }

.navbar-nav > li > .dropdown-menu li a:focus {
    outline: none; }

@media (max-width: 767px), only screen and (max-device-width: 1024px) {
    .navbar-default ul.navbar-main > li > a i.fa-caret-down {
        display: none; } }

.navbar-default .navbar-toggle {
    border: none; }

.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
    background: transparent; }

.navbar-default .navbar-toggle .icon-bar {
    background-color: #5A5A5A;
    height: 3px;
    border-radius: 3px; }

.navbar-default ul.navbar-main>li.join-nav-section>a {
    border-left: 1px solid #eee;
    color: #2A4E68;
    font-weight: 600;
    margin: 10px 15px 0 10px;
    padding: 5px 0 5px 20px;
}

.navbar-default ul.navbar-main>li>a.sign-in-btn {
    background: #2A4E68;
    padding: 3px 25px;
    border-radius: 4px;
    color: #fff;
    margin-top: 12px;
}

/*Header Navigation more styles in navigation_menu.css */

.search-container {
    position: absolute;
    display: none;
    width: 80%;
    left: 165px;
}

@media (min-width: 768px) and (max-width: 1200px) {
    .search-container
    {
        width: 80%;
    }
}

@media (max-width: 767px), only screen and (max-device-width: 1024px) {
    .search-container
    {
        display: none;
    }
}

.search-icon {
    display: none;
    padding: 17px 20px 16px;
    float: left;
    text-transform: uppercase;
    color: #8a959e;
    font-size: 12px;
    font-weight: 400;
}

.search-icon:hover {
    cursor: pointer;
    color: #8a959e;
}

.search-icon i {
    margin-right: 5px;
    color: #8a959e;
}

@media (max-width: 767px), only screen and (max-device-width: 1024px) {
    .search-icon
    {
        display: none !important;
    }
}

@media (max-width: 1060px) {
    .header-search-text
    {
        display: none;
    }
}

@media (max-width: 767px), only screen and (max-device-width: 1024px) {
    .header-search-form
    {
        display: none;
    }
    .custom-search-box
    {
        position: relative !important;
        left: 0px !important;;
    }
}

.custom-search-box {
    color: #30739C !important;
    font-size: 12px !important;
    text-transform: lowercase !important;
    font-weight: 400 !important;
    width: 100% !important;
}

.custom-search-box-mobile
{
    display: none !important;
    position: relative;
    width: 100% !important;
}

@media (max-width: 767px), only screen and (max-device-width: 1024px) {
    .custom-search-box-mobile
    {
        display: block !important;
    }
    .custom-search-box {
        display: none !important;
    }
}

.header-search, .custom-search-box, .custom-search-box-mobile {
    border: 2px solid #dae5ee !important;
    border-radius: 4px !important;
    height: 37px !important;
    margin: 7px 0 0 0 !important;
    padding: 0 !important;
    padding-left: 10px !important;
    background: #fff !important;
    width: 100% !important;
    -webkit-transition: width 4s !important;
    transition: width 4s !important;
    -webkit-border-horizontal-spacing: 0 !important;
    -webkit-border-vertical-spacing: 0 !important;
}

.header-search contenteditable .custom-search-box-mobile:hover, .custom-search-box-mobile:focus, .custom-search-box:hover, .custom-search-box:focus {
    box-shadow: none !important;
}

.header-search::-webkit-input-placeholder, .custom-search-box::-webkit-input-placeholder,custom-search-box-mobile::-webkit-input-placeholder {
    color: #C0CDDB;
    font-size: 12px;
    text-transform: lowercase;
    font-weight: 400;
}

.header-search:-moz-placeholder, .custom-search-box-mobile:-moz-placeholder, custom-search-box:-moz-placeholder {
    /* Firefox 18- */
    color: #C0CDDB;
    font-size: 12px;
    text-transform: lowercase;
    font-weight: 400;
}

.header-search::-moz-placeholder, .custom-search-box::-moz-placeholder, custom-search-box-mobile::-moz-placeholder {
    /* Firefox 19+ */
    color: #C0CDDB;
    font-size: 12px;
    text-transform: lowercase;
    font-weight: 400; }

.header-search:-ms-input-placeholder, .custom-search-box:-ms-input-placeholder, custom-search-box-mobile:-ms-input-placeholder {
    color: #C0CDDB;
    font-size: 12px;
    text-transform: lowercase;
    font-weight: 400; }

.header-search:focus, .custom-search-box:focus, .custom-search-box-mobile:focus {
    border-radius: 4px;
    outline: none;
    border: 2px solid #30739C !important;
    box-shadow: none;
}

.close-search {
    position: absolute;
    top: 20px;
    right: 10px;
    color: #dae5ee;
    z-index: 1001;
    font-size: 16px;
}

.close-search:hover
{
    color: #30739C;
    cursor: pointer;
}

@media (max-width: 767px), only screen and (max-device-width: 1024px) {
    .close-search
    {
        display: none !important;
    }
}

.show
{
    display: block;
}

@media (max-width: 767px), only screen and (max-device-width: 1024px) {
    .show
    {
        display: none;
    }
}

/*End Header Navigation*/

